--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 </style>
 </head>
 <body>
-<header>Miss Poppins’ Parlour of Calm</header>
+<header>Tea-Parlour of Calm</header>
 
 <div id="container">
   <div id="virtueShelf" class="bookshelf-bg">
