--- a/teaparlor/teaparlor-revision3.html
+++ b/teaparlor/teaparlor-revision3.html
@@ -384,7 +384,14 @@ setTimeout(() => {
   );
 }, 8000);
 
-
+<!-- Lore Popup Modal -->
+<div id="lorePopup" class="lore-popup">
+  <div class="lore-content">
+    <span class="close-popup">&times;</span>
+    <div id="loreMessage"></div>
+    <iframe id="loreFrame" src="" frameborder="0"></iframe>
+  </div>
+</div>
 </script>
 </body>
 </html>
