--- a/teaparlor/revision4.html
+++ b/teaparlor/revision4.html
@@ -154,6 +154,13 @@ body {
   flex-direction: column;
   font-family: 'Patrick Hand', cursive;
 }
+  #musicDrawer .controls button {
+  margin-top: 10px; /* increase to raise buttons */
+  margin-right: 5px;
+  padding: 6px 10px;
+  font-size: 1em;
+}
+
 #musicDrawer.open { right: 0; }
 #drawerHeader {
   display: flex;
